--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
@@ -19,8 +20,10 @@
     "react-native": "0.74.3",
     "react-native-date-picker": "^5.0.4",
     "react-native-floating-action": "^1.22.0",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-modal-selector": "^2.1.2",
     "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-reanimated": "^3.14.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
